# fractal_drum

./: .gitignore  CMakeLists.txt  readme.md
src/: fractal.cpp  fractal.h  lattice.cpp  lattice.h  main.cpp  plotter.py
